# spatius-avatar-demo

./: .gitignore  DOCS_SYNC.md  README.md
backend-mode/: README.md  start.sh
backend-mode/clients/android/: README.md  local.properties.example  settings.gradle.kts
backend-mode/clients/android/app/: build.gradle.kts
backend-mode/clients/android/gradle/: libs.versions.toml
backend-mode/clients/flutter/: README.md  pubspec.yaml
backend-mode/clients/flutter/lib/: avatar_view_model.dart  config.dart  config_check_page.dart  main.dart  playground_page.dart
backend-mode/clients/ios/: README.md
backend-mode/clients/ios/AvatarDemo/: App.swift  Config.swift
backend-mode/clients/ios/AvatarDemo.xcodeproj/: project.pbxproj
backend-mode/clients/web/: README.md
backend-mode/clients/web/nextjs-direct/: .env.example  package.json
backend-mode/clients/web/nextjs-iframe/: .gitignore  package.json
backend-mode/clients/web/react/: .env.example  index.html  package.json  vite.config.ts
backend-mode/clients/web/vanilla/: index.html  tsconfig.json  vite.config.ts
backend-mode/clients/web/vue/: package.json  tsconfig.json  vite.config.ts
backend-mode/servers/go/: README.md
backend-mode/servers/nodejs/: README.md
backend-mode/servers/python/: .env.example  README.md  pyproject.toml
backend-mode/servers/python/app/: __init__.py  config.py  main.py  pipeline.py  session.py
backend-mode/servers/python/app/avatar/: __init__.py  turn.py
direct-mode/: .gitignore  README.md
direct-mode/clients/android/: .gitignore  README.md  local.properties.example  settings.gradle.kts
direct-mode/clients/android/app/: build.gradle.kts
direct-mode/clients/flutter/: README.md  pubspec.yaml
direct-mode/clients/ios/: .gitignore  README.md  project.yml
direct-mode/servers/go/: .env.example  README.md  go.mod  main.go
direct-mode/servers/nodejs/: README.md  index.ts  package.json  tsconfig.json
direct-mode/servers/python/: .env.example  README.md  app.py  pyproject.toml
platform-integrations/livekit-agents-demo/livekit-agent-quickstart/: .gitignore  README.md
platform-integrations/livekit-agents-demo/livekit-agent-quickstart/backend/: .env.example  agent.py  pyproject.toml  token_server.py
platform-integrations/livekit-agents-demo/livekit-agents-reference-demo/: README.md
platform-integrations/livekit-agents-demo/livekit-agents-reference-demo/backend/cascade/: .env.example  agent.py  pyproject.toml  token_server.py
platform-integrations/livekit-agents-demo/livekit-agents-reference-demo/backend/end-to-end/: .dockerignore  .env.example  Dockerfile  agent.py  pyproject.toml  token_server.py
platform-integrations/livekit-room-demo/: README.md
(+237 files in other folders)
