[project]
name = "voice-agent-end-to-end"
version = "0.1.0"
description = "LiveKit voice agent with end-to-end realtime models"
requires-python = ">=3.10,<3.15"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "livekit-agents>=1.5.8,<2.0.0",
    "livekit-api>=1.1.0",
    "livekit-plugins-openai>=1.5.8,<2.0.0",
    "livekit-plugins-google>=1.5.8,<2.0.0",
    "livekit-plugins-aws[realtime]>=1.5.8,<2.0.0",
    "livekit-plugins-ultravox>=1.5.8,<2.0.0",
    "livekit-plugins-xai>=1.5.8,<2.0.0",
    "livekit-plugins-spatius>=1.5.8,<2.0.0",
    "python-dotenv>=1.0.0",
]
